--- a/cadastro.html
+++ b/cadastro.html
@@ -29,10 +29,10 @@
         <h2 class="titulo-paginas">Trabalhe Conosco</h2>
         <form action="#" method="post">
             <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome">
+            <input type="text" id="nome" name="nome" maxlenght="32">
 
             <label for="cpf">CPF:</label>
-            <input type="text" id="cpf" name="cpf" inputmode="numeric">
+            <input type="text" id="cpf" name="cpf" inputmode="numeric" maxlenght="11">
 
 
             <label for="email">Email:</label>
